--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
-<nav class=""></nav>
-
+<nav class="navbar bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#"> Bootstrap </a>
+    <a class="nav-link" routerLink="list"> List </a>
+    <a class="nav-link" routerLink="registration"> Registration </a>
+  </div>
+</nav>
 <router-outlet></router-outlet>
