--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -1,1 +1,47 @@
-<p>registration works!</p>
+<main class="mt-2 mb-2">
+  <div class="container px-4">
+    <div class="row">
+      <form [formGroup]="userAddForm" (ngSubmit)="submit()">
+        <div class="col-6">
+          <input
+            type="text"
+            formControlName="name"
+            class="form-control"
+            placeholder="Név"
+          />
+          <div
+            *ngIf="name?.errors?.['required'] && name?.dirty"
+            class="text-danger small"
+          >
+            Kötelező mező
+          </div>
+        </div>
+        <div class="col-6">
+          <input
+            type="text"
+            formControlName="address"
+            class="form-control"
+            placeholder="Cím"
+          />
+        </div>
+        <div class="col-6">
+          <select formControlName="country" class="form-control">
+            <option value="hu">Magyarország</option>
+            <option value="uk">Anglia</option>
+            <option value="us">Amerika</option>
+          </select>
+        </div>
+        <div class="col-12">
+          <input type="checkbox" formControlName="subscription" /> Feliratkozás
+        </div>
+        <button
+          class="btn btn-primary mt-2"
+          type="submit"
+          [disabled]="!userAddForm.valid"
+        >
+          Regisztráció
+        </button>
+      </form>
+    </div>
+  </div>
+</main>
